Fix: fix position on hamburger so z-index works

--- a/assets/style.css
+++ b/assets/style.css
@@ -244,6 +244,7 @@ a:hover {
     display: none;
     z-index: 10;
     cursor: pointer;
+    position: relative;
 }
 
 .bar1,
